# SKYPRO_HOMEWORK_29_DJANGO_VIEWSETS

./: db.sqlite3  manage.py  pyproject.toml
SKYPRO_HOMEWORK_27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  serializers.py  urls.py  views.py
ads/fixtures/: user.json
ads/migrations/: 0001_initial.py  0002_alter_ad_price.py  0003_location_alter_ad_is_published.py  0004_alter_ad_options_alter_category_options_and_more.py  0005_remove_user_location_alter_ad_author_delete_location_and_more.py  0006_alter_ad_author.py
ads/views/: ad.py  category.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_last_login.py  0003_alter_location_lat_alter_location_lng_and_more.py
users/views/: location.py  user.py
